Fix grid-related horizontal scroll

--- a/full/sass/_theme.sass
+++ b/full/sass/_theme.sass
@@ -85,18 +85,14 @@ h1, h2, h3, h4, h5, h6
     opacity: 0
 
 #dev-grid
+  +calc('left', '50% - 480px')
   position: absolute
   top: 0
-  left: 50%
   opacity: .3
   height: 5000px
   z-index: 9999
   pointer-events: none
   width: 960px
-  .center
-    position: relative
-    left: -480px
-    height: 100%
   .column
     width: 60px
     margin: 0 10px
